Add pToken prices in USD. Without caching/storing in DB
